2004-08-02  Carlos Garnacho Parro  <carlosg@gnome.org>

	* user-group-xml.c: remove user visibility check. Fixes #145049

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.90

2004-07-19  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* callbacks.[ch], main.c, table.[ch], user_group.c, users-table.[ch]:
	  removed complexity thing, added help buttons

2004-06-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.34

2004-06-08  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* passwd.c, user-settings.c: yet more strings improvements

2004-06-08  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* group-settings.c, profile-settings.c, profile-settings.c: improved
	  some sentences

2004-05-31  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* callbacks.[ch], groups-table.c, main.c, profile-settings.c,
	  profiles-table.c, table.[ch], user-settings.c, user_group.[ch],
	  users-table.c: replaced deprecated widgets with the new Gtk+ 2.4
	  ones, removed unused code, small misc code improvements
	* search-bar/search-bar.[ch]: Replaced deprecated widgets with the
	  Gtk+ 2.4 ones in the search bar

2004-05-15  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* Release 0.33.0

2004-05-05  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* callbacks.c: fixed a crash, made it to hide the password life
	  settings if the tags doesn't exist, this is done because FreeBSD
	  can't set these values
	* user-settings.c: ditto
	* profile-settings.[ch]: improved code and fixed some indents

2004-04-30  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* user-settings.c: turned the "duplicate UID error" into a warning,
	  this way we get rid of the "root" and "toor" duplicated UID 
	  problems in FreeBSD

2004-04-17  Carlos Garnacho Parro  <garnacho@tuxerver.net>

	* group-settings.c: added some control for not modifying root group
	* user-settings.c: improved some strings

2004-04-16  Carlos Garnacho Parro  <garnacho@tuxerver.net>
